--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
